--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -73,6 +73,7 @@
 		"karma-jasmine": "1.1.0",
 		"karma-phantomjs-launcher": "1.0.4",
 		"phantomjs-prebuilt": "2.1.14",
-		"vinyl-source-stream": "1.1.0"
+		"vinyl-source-stream": "1.1.0",
+		"watchify": "^3.9.0"
 	}
 }
