--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -74,6 +74,7 @@
 		"karma-phantomjs-launcher": "^1.0.4",
 		"phantomjs-prebuilt": "^2.1.15",
 		"vinyl-source-stream": "^1.1.0",
-		"watchify": "^3.9.0"
+		"watchify": "^3.9.0",
+		"whatwg-fetch": "^2.0.3"
 	}
 }
