--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima-gulp-tasks",
-	"version": "0.14.2",
+	"version": "0.15.0-beta1",
 	"description": "Default gulp tasks for IMA.js applications.",
 	"main": "",
 	"scripts": {
@@ -65,7 +65,7 @@
 		"gulp-uglify": "^3.0.0",
 		"gulp-util": "^3.0.8",
 		"gulp-watch": "^4.3.11",
-		"ima-examples": "^0.14.3",
+		"ima-examples": "^0.15.0-beta1",
 		"jasmine": "^2.6.0",
 		"jasmine-core": "^2.6.3",
 		"karma": "^1.7.0",
