--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,8 +32,7 @@
 		"gulp-jasmine": "^2.4.2",
 		"gulp-plumber": "^1.1.0",
 		"ima-helpers": "^0.14.0",
-		"jasmine": "^2.8.0",
-		"superagent": "^3.6.0"
+		"jasmine": "^2.8.0"
 	},
 	"dependencies": {
 		"async-each": "^1.0.1",
