--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -31,6 +31,7 @@
 		"babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
 		"babel-plugin-transform-react-constant-elements": "^6.23.0",
 		"babel-plugin-transform-react-inline-elements": "^6.22.0",
+		"babel-polyfill": "^6.26.0",
 		"babel-preset-latest": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babelify": "^7.3.0",
@@ -44,7 +45,7 @@
 		"fibers": "^2.0.0",
 		"gulp": "github:gulpjs/gulp#c120a94",
 		"gulp-autoprefixer": "^4.0.0",
-		"gulp-babel": "^6.1.2",
+		"gulp-babel": "^7.0.0",
 		"gulp-cached": "^1.1.1",
 		"gulp-change": "^1.0.0",
 		"gulp-concat": "^2.6.1",
@@ -53,8 +54,8 @@
 		"gulp-ignore": "^2.0.2",
 		"gulp-insert": "^0.5.0",
 		"gulp-jsdoc3": "^1.0.1",
-		"gulp-less": "^3.3.0",
-		"gulp-live-server": "^0.0.30",
+		"gulp-less": "^3.3.2",
+		"gulp-live-server": "^0.0.31",
 		"gulp-messageformat": "^0.0.10",
 		"gulp-plumber": "^1.1.0",
 		"gulp-remember": "^0.3.1",
