--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,18 +1,18 @@
 {
 	"name": "IMA.js-skeleton",
-	"version": "0.15.0-beta1",
+	"version": "0.15.0-beta2",
 	"description": "Isomorphic javascript application",
 	"main": "build/server.js",
 	"scripts": {
-		"app:hello": "node node_modules/gulp/bin/gulp.js app:hello",
-		"app:feed": "node node_modules/gulp/bin/gulp.js app:feed",
-		"app:todos": "node node_modules/gulp/bin/gulp.js app:todos",
-		"test": "node node_modules/gulp/bin/gulp.js test",
-		"dev": "node node_modules/gulp/bin/gulp.js dev",
-		"gulp": "node node_modules/.bin/gulp",
-		"build": "NODE_ENV=production node_modules/gulp/bin/gulp.js build",
-		"build:spa": "NODE_ENV=production node_modules/gulp/bin/gulp.js build:spa",
-		"start": "NODE_ENV=production node build/server.js"
+		"app:hello": "node_modules/.bin/gulp app:hello",
+		"app:feed": "node_modules/.bin/gulp app:feed",
+		"app:todos": "node_modules/.bin/gulp app:todos",
+		"test": "node_modules/.bin/gulp test",
+		"dev": "node_modules/.bin/gulp dev",
+		"gulp": "node_modules/.bin/gulp",
+		"build": "set NODE_ENV=production && node node_modules/gulp/bin/gulp build",
+		"build:spa": "set NODE_ENV=production && node node_modules/gulp/bin/gulp build:spa",
+		"start": "set NODE_ENV=production && node build/server"
 	},
 	"keywords": [
 		"IMA.js",
@@ -28,6 +28,10 @@
 		{
 			"name": "Martin Jurča",
 			"email": "martin.jurca@firma.seznam.cz"
+		},
+		{
+			"name": "Ondřej Baše",
+			"email": "ondrej.base@firma.seznam.cz"
 		}
 	],
 	"repository": {
@@ -49,8 +53,8 @@
 		"express": "4.15.3",
 		"express-http-proxy": "^1.0.6",
 		"helmet": "3.6.1",
-		"ima": "0.14.0-rc.26",
-		"ima-server": "0.14.0-rc.12",
+		"ima": "0.15.0-beta4",
+		"ima-server": "0.15.0-beta1",
 		"method-override": "2.3.9",
 		"multer": "1.3.0",
 		"serve-favicon": "2.4.3"
