#! changed eslint rules to prettier and added jest

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -7,7 +7,8 @@
 		"app:hello": "node_modules/.bin/gulp app:hello",
 		"app:feed": "node_modules/.bin/gulp app:feed",
 		"app:todos": "node_modules/.bin/gulp app:todos",
-		"test": "node_modules/.bin/gulp test",
+		"test": "node_modules/.bin/jest --config jest.conf.json",
+		"lint": "node_modules/.bin/eslint --fix './{app,server}/**/*.{js,jsx}'",
 		"dev": "node_modules/.bin/gulp dev",
 		"gulp": "node_modules/.bin/gulp",
 		"build": "set NODE_ENV=production && node node_modules/gulp/bin/gulp build",
@@ -20,20 +21,16 @@
 		"JavaScript"
 	],
 	"author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-	"contributors": [
-		{
-			"name": "Martin Urban",
-			"email": "martin.urban@firma.seznam.cz"
-		},
-		{
-			"name": "Martin Jurča",
-			"email": "martin.jurca@firma.seznam.cz"
-		},
-		{
-			"name": "Ondřej Baše",
-			"email": "ondrej.base@firma.seznam.cz"
-		}
-	],
+	"contributors": [{
+		"name": "Martin Urban",
+		"email": "martin.urban@firma.seznam.cz"
+	}, {
+		"name": "Martin Jurča",
+		"email": "martin.jurca@firma.seznam.cz"
+	}, {
+		"name": "Ondřej Baše",
+		"email": "ondrej.base@firma.seznam.cz"
+	}],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/seznam/IMA.js-skeleton.git"
@@ -47,16 +44,29 @@
 		"ima-gulp-tasks": "^0.15.0-beta3"
 	},
 	"dependencies": {
+		"babel-eslint": "8.0.1",
 		"body-parser": "1.17.2",
 		"compression": "1.6.2",
 		"cookie-parser": "1.4.3",
+		"enzyme": "3.1.0",
+		"enzyme-adapter-react-16": "1.0.2",
+		"eslint": "4.10.0",
+		"eslint-config-prettier": "2.7.0",
+		"eslint-plugin-jasmine": "2.9.1",
+		"eslint-plugin-jest": "21.2.0",
+		"eslint-plugin-prettier": "2.3.1",
+		"eslint-plugin-react": "7.4.0",
 		"express": "4.15.3",
-		"express-http-proxy": "^1.0.6",
+		"express-http-proxy": "1.0.6",
 		"helmet": "3.6.1",
 		"ima": "0.15.0-beta4",
 		"ima-server": "0.15.0-beta1",
 		"method-override": "2.3.9",
 		"multer": "1.3.0",
+		"prettier": "1.7.4",
+		"jest": "21.2.1",
+		"jest-serializer-enzyme": "1.0.0",
+		"react-test-renderer": "16.0.0",
 		"serve-favicon": "2.4.3"
 	}
 }
