--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -11,9 +11,9 @@
 		"lint": "node_modules/.bin/eslint --fix './{app,server}/**/*.{js,jsx}'",
 		"dev": "node_modules/.bin/gulp dev",
 		"gulp": "node_modules/.bin/gulp",
-		"build": "set NODE_ENV=production && node node_modules/gulp/bin/gulp build",
-		"build:spa": "set NODE_ENV=production && node node_modules/gulp/bin/gulp build:spa",
-		"start": "set NODE_ENV=production && node build/server"
+		"build": "NODE_ENV=production node node_modules/gulp/bin/gulp build",
+		"build:spa": "NODE_ENV=production node node_modules/gulp/bin/gulp build:spa",
+		"start": "NODE_ENV=production node build/server"
 	},
 	"keywords": [
 		"IMA.js",
@@ -61,11 +61,11 @@
 		"helmet": "3.6.1",
 		"ima": "0.15.0-beta4",
 		"ima-server": "0.15.0-beta1",
+		"jest": "21.2.1",
+		"jest-serializer-enzyme": "1.0.0",
 		"method-override": "2.3.9",
 		"multer": "1.3.0",
 		"prettier": "1.7.4",
-		"jest": "21.2.1",
-		"jest-serializer-enzyme": "1.0.0",
 		"react-test-renderer": "16.0.0",
 		"serve-favicon": "2.4.3"
 	}
