--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -32,14 +32,15 @@
 		"babel-plugin-transform-react-constant-elements": "^6.23.0",
 		"babel-plugin-transform-react-inline-elements": "^6.22.0",
 		"babel-polyfill": "^6.26.0",
-		"babel-preset-latest": "^6.24.1",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-es2016": "^6.24.1",
+		"babel-preset-es2017": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babelify": "^7.3.0",
 		"browserify": "^14.4.0",
+		"custom-event-polyfill": "^0.3.0",
 		"del": "^3.0.0",
 		"docdash": "^0.4.0",
-		"eslint": "^3.19.0",
-		"eslint-plugin-react": "^6.10.0",
 		"event-stream": "^3.3.4",
 		"fb-flo": "^0.5.0",
 		"fibers": "^2.0.0",
@@ -63,17 +64,10 @@
 		"gulp-save": "^1.2.1",
 		"gulp-sourcemaps": "^2.6.0",
 		"gulp-tap": "^1.0.1",
-		"gulp-uglify": "^3.0.0",
+		"gulp-uglify-es": "^0.1.3",
 		"gulp-util": "^3.0.8",
 		"gulp-watch": "^4.3.11",
 		"ima-examples": "^0.15.0-beta2",
-		"jasmine": "^2.6.0",
-		"jasmine-core": "^2.6.3",
-		"karma": "^1.7.0",
-		"karma-babel-preprocessor": "^6.0.1",
-		"karma-jasmine": "^1.1.0",
-		"karma-phantomjs-launcher": "^1.0.4",
-		"phantomjs-prebuilt": "^2.1.15",
 		"vinyl-source-stream": "^1.1.0",
 		"watchify": "^3.9.0",
 		"whatwg-fetch": "^2.0.3"
