--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,74 +1,76 @@
 {
-	"name": "ima-gulp-tasks",
-	"version": "0.15.0-beta4",
-	"description": "Default gulp tasks for IMA.js applications.",
-	"main": "",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
-	},
-	"keywords": [
-		"gulp",
-		"IMA.js",
-		"ima"
-	],
-	"author": "Seznam.cz, a.s.",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
-	},
-	"publishConfig": {
-		"registry": "http://registry.npmjs.org/"
-	},
-	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
-	"devDependencies": {},
-	"dependencies": {
-		"babel-core": "^6.26.0",
-		"babel-plugin-external-helpers-2": "^6.3.13",
-		"babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
-		"babel-plugin-transform-react-constant-elements": "^6.23.0",
-		"babel-plugin-transform-react-inline-elements": "^6.22.0",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-es2016": "^6.24.1",
-		"babel-preset-es2017": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
-		"babelify": "^8.0.0",
-		"browserify": "^14.4.0",
-		"custom-event-polyfill": "^0.3.0",
-		"del": "^3.0.0",
-		"event-stream": "^3.3.4",
-		"fb-flo": "^0.5.0",
-		"fibers": "^2.0.0",
-		"gulp": "github:gulpjs/gulp#6d71a65",
-		"gulp-autoprefixer": "^4.0.0",
-		"gulp-babel": "^7.0.0",
-		"gulp-cached": "^1.1.1",
-		"gulp-change": "^1.0.0",
-		"gulp-concat": "^2.6.1",
-		"gulp-cssnano": "^2.1.2",
-		"gulp-eslint": "^4.0.0",
-		"gulp-ignore": "^2.0.2",
-		"gulp-insert": "^0.5.0",
-		"gulp-jsdoc3": "^1.0.1",
-		"gulp-less": "^3.3.2",
-		"gulp-live-server": "^0.0.31",
-		"gulp-messageformat": "^0.0.10",
-		"gulp-plumber": "^1.1.0",
-		"gulp-remember": "^0.3.1",
-		"gulp-rename": "^1.2.2",
-		"gulp-save": "^1.2.1",
-		"gulp-sourcemaps": "^2.6.0",
-		"gulp-tap": "^1.0.1",
-		"gulp-uglify-es": "^0.1.3",
-		"gulp-util": "^3.0.8",
-		"gulp-watch": "^4.3.11",
-		"ima-examples": "^0.15.0-beta2",
-		"vinyl-source-stream": "^1.1.0",
-		"watchify": "^3.9.0",
-		"whatwg-fetch": "^2.0.3"
-	}
+    "name": "ima-gulp-tasks",
+    "version": "0.15.0-beta4",
+    "description": "Default gulp tasks for IMA.js applications.",
+    "main": "",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
+    },
+    "keywords": [
+        "gulp",
+        "IMA.js",
+        "ima"
+    ],
+    "author": "Seznam.cz, a.s.",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
+    },
+    "publishConfig": {
+        "registry": "http://registry.npmjs.org/"
+    },
+    "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
+    "devDependencies": {},
+    "dependencies": {
+        "babel-core": "^6.26.0",
+        "babel-plugin-external-helpers-2": "^6.3.13",
+        "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
+        "babel-plugin-transform-react-constant-elements": "^6.23.0",
+        "babel-plugin-transform-react-inline-elements": "^6.22.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2016": "^6.24.1",
+        "babel-preset-es2017": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babelify": "^8.0.0",
+        "browserify": "^14.4.0",
+        "custom-event-polyfill": "^0.3.0",
+        "del": "^3.0.0",
+        "event-stream": "^3.3.4",
+        "fb-flo": "^0.5.0",
+        "fibers": "^2.0.0",
+        "gulp": "github:gulpjs/gulp#6d71a65",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-babel": "^7.0.0",
+        "gulp-cached": "^1.1.1",
+        "gulp-change": "^1.0.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-cssnano": "^2.1.2",
+        "gulp-eslint": "^4.0.0",
+        "gulp-ignore": "^2.0.2",
+        "gulp-insert": "^0.5.0",
+        "gulp-jsdoc3": "^1.0.1",
+        "gulp-less": "^3.3.2",
+        "gulp-live-server": "^0.0.31",
+        "gulp-messageformat": "^0.0.10",
+        "gulp-plumber": "^1.1.0",
+        "gulp-remember": "^0.3.1",
+        "gulp-rename": "^1.2.2",
+        "gulp-save": "^1.2.1",
+        "gulp-sourcemaps": "^2.6.0",
+        "gulp-tap": "^1.0.1",
+        "gulp-uglify-es": "^0.1.3",
+        "gulp-util": "^3.0.8",
+        "gulp-watch": "^4.3.11",
+        "ima-examples": "^0.15.0-beta2",
+        "loose-envify": "^1.3.1",
+        "vinyl-buffer": "^1.0.0",
+        "vinyl-source-stream": "^1.1.0",
+        "watchify": "^3.9.0",
+        "whatwg-fetch": "^2.0.3"
+    }
 }
