--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -66,6 +66,7 @@
 		"gulp-uglify-es": "^0.1.4",
 		"gulp-util": "^3.0.8",
 		"gulp-watch": "^4.3.11",
+		"ima-clientify": "^0.1.0",
 		"ima-examples": "^0.15.0-beta2",
 		"loose-envify": "^1.3.1",
 		"vinyl-buffer": "^1.0.0",
