--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -39,6 +39,7 @@
 		"babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
 		"babel-plugin-transform-react-constant-elements": "^6.23.0",
 		"babel-plugin-transform-react-inline-elements": "^6.22.0",
+		"babel-plugin-transform-react-remove-prop-types": "^0.4.10",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-es2016": "^6.24.1",
