--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -69,6 +69,7 @@
 		"gulp-rename": "^1.2.2",
 		"gulp-save": "^1.3.0",
 		"gulp-sourcemaps": "^2.6.0",
+		"gulp-tap": "^1.0.1",
 		"gulp-uglify-es": "^0.1.9",
 		"gulp-util": "^3.0.8",
 		"gulp-watch": "^4.3.11",
