--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -26,11 +26,11 @@
 	},
 	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
 	"devDependencies": {
-		"babel-eslint": "^8.0.3",
-		"eslint": "^4.13.1",
+		"babel-eslint": "^8.1.2",
+		"eslint": "^4.15.0",
 		"eslint-config-last": "^0.0.5",
 		"eslint-config-prettier": "^2.9.0",
-		"eslint-plugin-prettier": "^2.3.1",
+		"eslint-plugin-prettier": "^2.4.0",
 		"prettier": "^1.9.2"
 	},
 	"dependencies": {
@@ -39,45 +39,46 @@
 		"babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
 		"babel-plugin-transform-react-constant-elements": "^6.23.0",
 		"babel-plugin-transform-react-inline-elements": "^6.22.0",
-		"babel-plugin-transform-react-remove-prop-types": "^0.4.10",
+		"babel-plugin-transform-react-remove-prop-types": "^0.4.12",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-es2016": "^6.24.1",
 		"babel-preset-es2017": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babelify": "^8.0.0",
-		"browserify": "^14.4.0",
+		"browserify": "^15.0.0",
 		"custom-event-polyfill": "^0.3.0",
 		"del": "^3.0.0",
 		"event-stream": "^3.3.4",
 		"fb-flo": "^0.5.0",
 		"fibers": "^2.0.0",
 		"gulp": "github:gulpjs/gulp#6d71a65",
-		"gulp-autoprefixer": "^4.0.0",
+		"gulp-autoprefixer": "^4.1.0",
 		"gulp-babel": "^7.0.0",
 		"gulp-cached": "^1.1.1",
 		"gulp-concat": "^2.6.1",
 		"gulp-cssnano": "^2.1.2",
-		"gulp-eslint": "^4.0.0",
+		"gulp-eslint": "^4.0.1",
 		"gulp-insert": "^0.5.0",
 		"gulp-jsdoc3": "^1.0.1",
-		"gulp-less": "^3.3.2",
+		"gulp-less": "^3.4.0",
 		"gulp-live-server": "^0.0.31",
 		"gulp-messageformat": "^0.0.10",
-		"gulp-plumber": "^1.1.0",
-		"gulp-remember": "^1.0.0",
+		"gulp-plumber": "^1.2.0",
+		"gulp-remember": "^1.0.1",
 		"gulp-rename": "^1.2.2",
 		"gulp-save": "^1.3.0",
-		"gulp-sourcemaps": "^2.6.0",
+		"gulp-sourcemaps": "^2.6.3",
 		"gulp-tap": "^1.0.1",
-		"gulp-uglify-es": "^0.1.9",
+		"gulp-uglify-es": "^0.1.11",
 		"gulp-util": "^3.0.8",
-		"gulp-watch": "^4.3.11",
+		"gulp-watch": "^5.0.0",
 		"ima-clientify": "^0.1.2",
 		"ima-examples": "^0.15.0-beta2",
 		"loose-envify": "^1.3.1",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-source-stream": "^1.1.0",
+		"mkdirp": "^0.5.1",
+		"vinyl-buffer": "^1.0.1",
+		"vinyl-source-stream": "^2.0.0",
 		"watchify": "^3.9.0",
 		"whatwg-fetch": "^2.0.3"
 	}
