--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -27,7 +27,7 @@
     "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
     "devDependencies": {
         "babel-eslint": "^8.2.2",
-        "eslint": "^4.18.2",
+        "eslint": "^4.19.1",
         "eslint-config-last": "^0.0.5",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.0",
@@ -51,16 +51,16 @@
         "del": "^3.0.0",
         "event-stream": "^3.3.4",
         "fb-flo": "^0.5.0",
-        "fibers": "^2.0.0",
+        "fibers": "^2.0.2",
         "gulp": "github:gulpjs/gulp#6d71a65",
         "gulp-autoprefixer": "^5.0.0",
         "gulp-babel": "^7.0.1",
         "gulp-cached": "^1.1.1",
         "gulp-concat": "^2.6.1",
-        "gulp-cssnano": "^2.1.2",
+        "gulp-cssnano": "^2.1.3",
         "gulp-eslint": "^4.0.2",
         "gulp-insert": "^0.5.0",
-        "gulp-jsdoc3": "^1.0.1",
+        "gulp-jsdoc3": "^2.0.0",
         "gulp-less": "^4.0.0",
         "gulp-live-server": "^0.0.31",
         "gulp-messageformat": "^0.0.10",
@@ -74,12 +74,12 @@
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.0",
         "ima-clientify": "^0.1.2",
-        "ima-examples": "^0.15.0-beta4",
+        "ima-examples": "^0.15.0",
         "loose-envify": "^1.3.1",
         "mkdirp": "^0.5.1",
         "vinyl-buffer": "^1.0.1",
         "vinyl-source-stream": "^2.0.0",
         "watchify": "^3.11.0",
-        "whatwg-fetch": "^2.0.3"
+        "whatwg-fetch": "^2.0.4"
     }
 }
