--- a/packages/gulp-task-loader/package.json
+++ b/packages/gulp-task-loader/package.json
@@ -1,28 +1,39 @@
 {
-	"name": "ima-gulp-task-loader",
-	"version": "0.14.0",
-	"description": "Automatic gulp task loader for IMA.js applications.",
-	"main": "taskLoader.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/seznam/IMA.js-gulp-task-loader.git"
-	},
-	"publishConfig": {
-		"registry": "http://registry.npmjs.org/"
-	},
-	"keywords": [
-		"gulp",
-		"ima.js",
-		"IMA",
-		"taskloader"
-	],
-	"author": "Seznam.cz, a.s.",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/seznam/IMA.js-gulp-task-loader/issues"
-	},
-	"homepage": "https://github.com/seznam/IMA.js-gulp-task-loader"
+    "name": "ima-gulp-task-loader",
+    "version": "0.14.0",
+    "description": "Automatic gulp task loader for IMA.js applications.",
+    "main": "taskLoader.js",
+    "scripts": {
+        "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --fix './*.js' --ignore-path ./.prettierignore",
+        "preversion": "npm test && npm run lint",
+        "postversion": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
+        "test": "echo \"Error: no test specified\" && exit 0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/seznam/IMA.js-gulp-task-loader.git"
+    },
+    "publishConfig": {
+        "registry": "http://registry.npmjs.org/"
+    },
+    "keywords": [
+        "gulp",
+        "ima.js",
+        "IMA",
+        "taskloader"
+    ],
+    "author": "Seznam.cz, a.s.",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/seznam/IMA.js-gulp-task-loader/issues"
+    },
+    "devDependencies": {
+        "babel-eslint": "^8.2.2",
+        "eslint": "^4.19.1",
+        "eslint-config-last": "^0.0.5",
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-prettier": "^2.6.0",
+        "prettier": "^1.11.1"
+    },
+    "homepage": "https://github.com/seznam/IMA.js-gulp-task-loader"
 }
