--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,9 @@
     "description": "Default dev server for IMA.js applications.",
     "main": "index.js",
     "scripts": {
-        "prepublishOnly": "npm run test",
+        "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --fix './**/*.js' --ignore-path ./.prettierignore",
+        "preversion": "npm test && npm run lint",
+        "postversion": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
         "test": "node node_modules/gulp/bin/gulp.js test",
         "dev": "node node_modules/gulp/bin/gulp.js dev"
     },
@@ -30,9 +32,15 @@
         "express": "^4.16.3",
         "gulp": "github:gulpjs/gulp#3f5aba2",
         "gulp-jasmine": "^3.0.0",
-        "gulp-plumber": "^1.2.0",
         "ima-helpers": "^0.15.0",
-        "jasmine": "^2.8.0"
+        "jasmine": "^2.8.0",
+        "babel-eslint": "^8.2.2",
+        "eslint": "^4.19.1",
+        "eslint-config-last": "^0.0.5",
+        "eslint-plugin-jasmine": "^2.9.3",
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-prettier": "^2.6.0",
+        "prettier": "^1.11.1"
     },
     "dependencies": {
         "async-each": "^1.0.1",
