--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,6 @@
 {
     "name": "IMA.js-skeleton",
-    "version": "0.15.0-beta2",
+    "version": "0.15.0",
     "description": "Isomorphic javascript application",
     "main": "build/server.js",
     "scripts": {
@@ -21,20 +21,16 @@
         "JavaScript"
     ],
     "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-    "contributors": [
-        {
-            "name": "Martin Urban",
-            "email": "martin.urban@firma.seznam.cz"
-        },
-        {
-            "name": "Martin Jurča",
-            "email": "martin.jurca@firma.seznam.cz"
-        },
-        {
-            "name": "Ondřej Baše",
-            "email": "ondrej.base@firma.seznam.cz"
-        }
-    ],
+    "contributors": [{
+        "name": "Martin Urban",
+        "email": "martin.urban@firma.seznam.cz"
+    }, {
+        "name": "Martin Jurča",
+        "email": "martin.jurca@firma.seznam.cz"
+    }, {
+        "name": "Ondřej Baše",
+        "email": "ondrej.base@firma.seznam.cz"
+    }],
     "repository": {
         "type": "git",
         "url": "https://github.com/seznam/IMA.js-skeleton.git"
@@ -44,8 +40,8 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "ima-gulp-task-loader": "^0.14.0",
-        "ima-gulp-tasks": "^0.15.0-beta19"
+        "ima-gulp-task-loader": "^0.15.0",
+        "ima-gulp-tasks": "^0.15.0"
     },
     "dependencies": {
         "babel-eslint": "8.2.2",
@@ -54,18 +50,18 @@
         "cookie-parser": "1.4.3",
         "enzyme": "3.3.0",
         "enzyme-adapter-react-16": "1.1.1",
-        "eslint": "4.18.2",
+        "eslint": "4.19.1",
         "eslint-config-prettier": "2.9.0",
         "eslint-plugin-jasmine": "2.9.3",
-        "eslint-plugin-jest": "21.13.0",
+        "eslint-plugin-jest": "21.15.0",
         "eslint-plugin-prettier": "2.6.0",
         "eslint-plugin-react": "7.7.0",
-        "express": "4.16.2",
+        "express": "4.16.3",
         "express-http-proxy": "1.1.0",
         "helmet": "3.12.0",
-        "ima": "0.15.0-beta23",
-        "ima-server": "0.15.0-beta3",
-        "jest": "22.4.2",
+        "ima": "0.15.1",
+        "ima-server": "0.15.0",
+        "jest": "22.4.3",
         "jest-serializer-enzyme": "1.0.0",
         "method-override": "2.3.10",
         "multer": "1.3.0",
@@ -74,6 +70,6 @@
         "react": "16.2.0",
         "react-dom": "16.2.0",
         "react-test-renderer": "16.2.0",
-        "serve-favicon": "2.4.5"
+        "serve-favicon": "2.5.0"
     }
 }
