--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,8 +7,7 @@
         "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --fix './**/*.js' --ignore-path ./.prettierignore",
         "preversion": "npm test && npm run lint",
         "postversion": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
-        "test": "node node_modules/gulp/bin/gulp.js test",
-        "dev": "node node_modules/gulp/bin/gulp.js dev"
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -33,7 +32,7 @@
         "gulp": "github:gulpjs/gulp#3f5aba2",
         "gulp-jasmine": "^3.0.0",
         "ima-helpers": "^0.15.0",
-        "jasmine": "^2.8.0",
+        "jest": "^22.4.3",
         "babel-eslint": "^8.2.2",
         "eslint": "^4.19.1",
         "eslint-config-last": "^0.0.5",
@@ -55,5 +54,25 @@
     "engines": {
         "node": ">=6",
         "npm": ">=4 <6"
+    },
+    "jest": {
+        "bail": false,
+        "verbose": true,
+        "testEnvironment": "node",
+        "setupFiles": [],
+        "resolver": "<rootDir>/resolver.js",
+        "modulePaths": [
+            "<rootDir>/"
+        ],
+        "testMatch": [
+            "**/__tests__/*.js"
+        ]
+    },
+    "jestConfig": {
+        "mockRules": {
+            "lib": [
+                {"../../app/build.js": "./__mocks__/build.js"}
+            ]
+        }
     }
 }
