--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -71,7 +71,9 @@
     "jestConfig": {
         "mockRules": {
             "lib": [
-                {"../../app/build.js": "./__mocks__/build.js"}
+                {
+                    "../../app/build.js": "./__mocks__/build.js"
+                }
             ]
         }
     }
