--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -24,7 +24,7 @@
         "url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
     },
     "publishConfig": {
-        "registry": "http://registry.npmjs.org/"
+        "registry": "https://registry.npmjs.org/"
     },
     "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
     "devDependencies": {
