--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -36,6 +36,7 @@
         "prettier": "^1.13.7"
     },
     "dependencies": {
+        "autoprefixer": "^9.1.0",
         "babel-core": "^6.26.3",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
@@ -55,7 +56,6 @@
         "fb-flo": "^0.5.0",
         "fibers": "^2.0.2",
         "gulp": "^4.0.0",
-        "gulp-autoprefixer": "^5.0.0",
         "gulp-babel": "^7.0.1",
         "gulp-cached": "^1.1.1",
         "gulp-concat": "^2.6.1",
@@ -67,6 +67,7 @@
         "gulp-live-server": "^0.0.31",
         "gulp-messageformat": "^0.0.10",
         "gulp-plumber": "^1.2.0",
+        "gulp-postcss": "^8.0.0",
         "gulp-remember": "^1.0.1",
         "gulp-rename": "^1.3.0",
         "gulp-save": "^1.3.0",
