--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -28,35 +28,38 @@
     },
     "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
     "devDependencies": {
-        "babel-eslint": "^8.2.5",
-        "eslint": "^5.3.0",
+        "babel-eslint": "^9.0.0",
+        "eslint": "^5.5.0",
         "eslint-config-last": "^0.0.5",
         "eslint-config-prettier": "^3.0.1",
         "eslint-plugin-prettier": "^2.6.2",
         "prettier": "^1.14.2"
     },
     "dependencies": {
-        "autoprefixer": "^9.1.1",
-        "babel-core": "^6.26.3",
+        "@babel/core": "^7.0.0",
+        "@babel/polyfill": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "ansi-colors": "^3.0.5",
+        "autoprefixer": "^9.1.5",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
         "babel-plugin-transform-react-constant-elements": "^6.23.0",
         "babel-plugin-transform-react-inline-elements": "^6.22.0",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-        "babel-polyfill": "^6.26.0",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2016": "^6.24.1",
         "babel-preset-es2017": "^6.24.1",
         "babel-preset-react": "^6.24.1",
-        "babelify": "^8.0.0",
+        "babelify": "^10.0.0",
         "browserify": "^16.2.2",
-        "custom-event-polyfill": "^0.3.0",
+        "custom-event-polyfill": "^1.0.6",
         "del": "^3.0.0",
-        "event-stream": "^3.3.4",
+        "event-stream": "^3.3.6",
+        "fancy-log": "^1.3.2",
         "fb-flo": "^0.5.0",
-        "fibers": "^2.0.2",
+        "fibers": "^3.0.0",
         "gulp": "^4.0.0",
-        "gulp-babel": "^7.0.1",
+        "gulp-babel": "^8.0.0",
         "gulp-cached": "^1.1.1",
         "gulp-concat": "^2.6.1",
         "gulp-cssnano": "^2.1.3",
@@ -74,15 +77,16 @@
         "gulp-sourcemaps": "^2.6.4",
         "gulp-tap": "^1.0.1",
         "gulp-uglify-es": "^1.0.4",
-        "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.0",
         "ima-clientify": "^0.1.2",
         "ima-examples": "^0.15.1",
         "loose-envify": "^1.4.0",
         "mkdirp": "^0.5.1",
+        "plugin-error": "^1.0.1",
+        "through2": "^2.0.3",
         "vinyl-buffer": "^1.0.1",
         "vinyl-source-stream": "^2.0.0",
         "watchify": "^3.11.0",
-        "whatwg-fetch": "^2.0.4"
+        "whatwg-fetch": "^3.0.0"
     }
 }
