--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -27,12 +27,16 @@
         "registry": "https://registry.npmjs.org/"
     },
     "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
+    "peerDependencies": {
+        "ima-server": "^0.15.2"
+    },
     "devDependencies": {
         "babel-eslint": "^8.2.5",
         "eslint": "^5.3.0",
         "eslint-config-last": "^0.0.5",
         "eslint-config-prettier": "^3.0.1",
         "eslint-plugin-prettier": "^2.6.2",
+        "ima-server": "^0.15.2",
         "prettier": "^1.14.2"
     },
     "dependencies": {
@@ -78,7 +82,6 @@
         "gulp-watch": "^5.0.0",
         "ima-clientify": "^0.1.2",
         "ima-examples": "^0.15.1",
-        "ima-server": "^0.15.2",
         "loose-envify": "^1.4.0",
         "mkdirp": "^0.5.1",
         "vinyl-buffer": "^1.0.1",
