--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -30,15 +30,15 @@
         "clone": "^2.1.2"
     },
     "devDependencies": {
-        "babel-eslint": "^8.2.2",
-        "eslint": "^4.19.1",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^5.7.0",
         "eslint-config-last": "^0.0.5",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-jasmine": "^2.9.3",
-        "eslint-plugin-prettier": "^2.6.0",
-        "prettier": "^1.11.1",
-        "gulp": "github:gulpjs/gulp#3f5aba2",
-        "gulp-jasmine": "^2.4.2"
+        "eslint-config-prettier": "^3.1.0",
+        "eslint-plugin-jasmine": "^2.10.1",
+        "eslint-plugin-prettier": "^3.0.0",
+        "prettier": "^1.14.3",
+        "gulp": "^4.0.0",
+        "gulp-jasmine": "^4.0.0"
     },
     "engines": {
         "node": ">=6",
