--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -31,11 +31,12 @@
         "ima-server": "^0.15.2"
     },
     "devDependencies": {
-        "babel-eslint": "^9.0.0",
+        "babel-eslint": "^10.0.1",
         "eslint": "^5.5.0",
         "eslint-config-last": "^0.0.5",
         "eslint-config-prettier": "^3.0.1",
-        "eslint-plugin-prettier": "^2.6.2",
+        "eslint-plugin-prettier": "^3.0.0",
+        "ima-helpers": "^0.15.1",
         "ima-server": "^0.15.2",
         "prettier": "^1.14.2"
     },
@@ -63,7 +64,7 @@
         "browserify": "^16.2.2",
         "custom-event-polyfill": "^1.0.6",
         "del": "^3.0.0",
-        "event-stream": "^3.3.6",
+        "event-stream": "^4.0.1",
         "fancy-log": "^1.3.2",
         "fb-flo": "^0.5.0",
         "fibers": "^3.0.0",
@@ -92,7 +93,7 @@
         "loose-envify": "^1.4.0",
         "mkdirp": "^0.5.1",
         "plugin-error": "^1.0.1",
-        "through2": "^2.0.3",
+        "through2": "^3.0.0",
         "vinyl-buffer": "^1.0.1",
         "vinyl-source-stream": "^2.0.0",
         "watchify": "^3.11.0",
