--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -43,6 +43,7 @@
     "dependencies": {
         "@babel/core": "^7.0.0",
         "@babel/plugin-external-helpers": "^7.0.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.0.0",
         "@babel/plugin-transform-modules-systemjs": "^7.0.0",
         "@babel/plugin-transform-react-constant-elements": "^7.0.0",
         "@babel/plugin-transform-react-inline-elements": "^7.0.0",
@@ -51,15 +52,6 @@
         "@babel/preset-react": "^7.0.0",
         "ansi-colors": "^3.0.5",
         "autoprefixer": "^9.1.5",
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
-        "babel-plugin-transform-react-constant-elements": "^6.23.0",
-        "babel-plugin-transform-react-inline-elements": "^6.22.0",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-es2016": "^6.24.1",
-        "babel-preset-es2017": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
         "babelify": "^10.0.0",
         "browserify": "^16.2.2",
         "custom-event-polyfill": "^1.0.6",
