--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,94 +1,93 @@
 {
-    "name": "ima-gulp-tasks",
-    "version": "0.16.0-alpha.3",
-    "description": "Default gulp tasks for IMA.js applications.",
-    "main": "",
-    "scripts": {
-        "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --fix './**/*.js' --ignore-path ./.prettierignore",
-        "preversion": "npm test && npm run lint",
-        "postversion": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
-        "test": "echo \"Error: no test specified\" && exit 0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
-    },
-    "keywords": [
-        "gulp",
-        "IMA.js",
-        "ima"
-    ],
-    "author": "Seznam.cz, a.s.",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
-    },
-    "publishConfig": {
-        "registry": "https://registry.npmjs.org/"
-    },
-    "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
-    "peerDependencies": {
-        "ima-server": "^0.15.2"
-    },
-    "devDependencies": {
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.5.0",
-        "eslint-config-last": "^0.0.5",
-        "eslint-config-prettier": "^3.0.1",
-        "eslint-plugin-prettier": "^3.0.0",
-        "ima-helpers": "^0.15.1",
-        "ima-server": "^0.15.2",
-        "prettier": "^1.14.2"
-    },
-    "dependencies": {
-        "@babel/core": "^7.0.0",
-        "@babel/plugin-external-helpers": "^7.0.0",
-        "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-        "@babel/plugin-transform-modules-systemjs": "^7.0.0",
-        "@babel/plugin-transform-react-constant-elements": "^7.0.0",
-        "@babel/plugin-transform-react-inline-elements": "^7.0.0",
-        "@babel/polyfill": "^7.0.0",
-        "@babel/preset-env": "^7.0.0",
-        "@babel/preset-react": "^7.0.0",
-        "ansi-colors": "^3.0.5",
-        "autoprefixer": "^9.1.5",
-        "babelify": "^10.0.0",
-        "browserify": "^16.2.2",
-        "custom-event-polyfill": "^1.0.6",
-        "del": "^3.0.0",
-        "event-stream": "^4.0.1",
-        "fancy-log": "^1.3.2",
-        "fb-flo": "^0.5.0",
-        "fibers": "^3.1.0",
-        "gulp": "^4.0.0",
-        "gulp-babel": "^8.0.0",
-        "gulp-cached": "^1.1.1",
-        "gulp-concat": "^2.6.1",
-        "gulp-cssnano": "^2.1.3",
-        "gulp-eslint": "^5.0.0",
-        "gulp-insert": "^0.5.0",
-        "gulp-jsdoc3": "^2.0.0",
-        "gulp-less": "^4.0.0",
-        "gulp-live-server": "^0.0.31",
-        "gulp-messageformat": "^0.1.0",
-        "gulp-plumber": "^1.2.0",
-        "gulp-postcss": "^8.0.0",
-        "gulp-remember": "^1.0.1",
-        "gulp-rename": "^1.3.0",
-        "gulp-save": "^1.3.0",
-        "gulp-sourcemaps": "^2.6.4",
-        "gulp-tap": "^1.0.1",
-        "gulp-uglify-es": "^1.0.4",
-        "gulp-watch": "^5.0.0",
-        "ima-clientify": "^0.1.2",
-        "ima-examples": "^0.15.1",
-        "loose-envify": "^1.4.0",
-        "mkdirp": "^0.5.1",
-        "plugin-error": "^1.0.1",
-        "through2": "^3.0.0",
-        "vinyl-buffer": "^1.0.1",
-        "vinyl-source-stream": "^2.0.0",
-        "watchify": "^3.11.0",
-        "whatwg-fetch": "^3.0.0"
-    }
+  "name": "ima-gulp-tasks",
+  "version": "0.16.0-alpha.3",
+  "description": "Default gulp tasks for IMA.js applications.",
+  "main": "",
+  "scripts": {
+    "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --fix './**/*.js' --ignore-path ./.prettierignore",
+    "preversion": "npm test && npm run lint",
+    "postversion": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
+    "test": "echo \"Error: no test specified\" && exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
+  },
+  "keywords": [
+    "gulp",
+    "IMA.js",
+    "ima"
+  ],
+  "author": "Seznam.cz, a.s.",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
+  "peerDependencies": {
+    "ima-helpers": "^0.16.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.5.0",
+    "eslint-config-last": "^0.0.5",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^3.0.0",
+    "ima-helpers": "^0.16.0",
+    "prettier": "^1.14.2"
+  },
+  "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+    "@babel/plugin-transform-modules-systemjs": "^7.0.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "ansi-colors": "^3.0.5",
+    "autoprefixer": "^9.1.5",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.2",
+    "custom-event-polyfill": "^1.0.6",
+    "del": "^3.0.0",
+    "event-stream": "^4.0.1",
+    "fancy-log": "^1.3.2",
+    "fb-flo": "^0.5.0",
+    "fibers": "^3.1.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^5.0.0",
+    "gulp-insert": "^0.5.0",
+    "gulp-jsdoc3": "^2.0.0",
+    "gulp-less": "^4.0.0",
+    "gulp-live-server": "^0.0.31",
+    "gulp-messageformat": "^0.1.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-remember": "^1.0.1",
+    "gulp-rename": "^1.3.0",
+    "gulp-save": "^1.3.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-tap": "^1.0.1",
+    "gulp-uglify-es": "^1.0.4",
+    "gulp-watch": "^5.0.0",
+    "ima-clientify": "^0.1.2",
+    "ima-examples": "^0.15.1",
+    "loose-envify": "^1.4.0",
+    "mkdirp": "^0.5.1",
+    "plugin-error": "^1.0.1",
+    "through2": "^3.0.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0",
+    "whatwg-fetch": "^3.0.0"
+  }
 }
