#18 added missing dependencies

--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -46,11 +46,13 @@
     "@babel/plugin-transform-modules-systemjs": "^7.2.0",
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "ansi-colors": "^3.2.2",
     "autoprefixer": "^9.4.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
     "babelify": "^10.0.0",
     "browserify": "^16.2.2",
     "custom-event-polyfill": "^1.0.6",
