--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -68,9 +68,11 @@
   },
   "jestConfig": {
     "mockRules": {
-      "lib": [{
-        "../../app/build.js": "./__mocks__/build.js"
-      }]
+      "lib": [
+        {
+          "../../app/build.js": "./__mocks__/build.js"
+        }
+      ]
     }
   }
 }
