--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -21,16 +21,20 @@
     "JavaScript"
   ],
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "contributors": [{
-    "name": "Martin Urban",
-    "email": "martin.urban@firma.seznam.cz"
-  }, {
-    "name": "Martin Jurča",
-    "email": "martin.jurca@firma.seznam.cz"
-  }, {
-    "name": "Ondřej Baše",
-    "email": "ondrej.base@firma.seznam.cz"
-  }],
+  "contributors": [
+    {
+      "name": "Martin Urban",
+      "email": "martin.urban@firma.seznam.cz"
+    },
+    {
+      "name": "Martin Jurča",
+      "email": "martin.jurca@firma.seznam.cz"
+    },
+    {
+      "name": "Ondřej Baše",
+      "email": "ondrej.base@firma.seznam.cz"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/seznam/IMA.js-skeleton.git"
@@ -41,35 +45,35 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "10.0.1",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.7.1",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.10.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "5.11.1",
-    "eslint-config-prettier": "3.3.0",
+    "eslint": "5.14.1",
+    "eslint-config-prettier": "4.1.0",
     "eslint-plugin-jasmine": "2.10.1",
-    "eslint-plugin-jest": "22.1.2",
+    "eslint-plugin-jest": "22.3.0",
     "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-react": "7.12.0",
+    "eslint-plugin-react": "7.12.4",
     "ima-examples": "^0.16.0",
     "ima-gulp-task-loader": "^0.16.0",
     "ima-gulp-tasks": "^0.16.1",
-    "jest": "23.6.0",
-    "prettier": "1.15.3"
+    "jest": "24.1.0",
+    "prettier": "1.16.4"
   },
   "dependencies": {
     "body-parser": "1.18.3",
     "compression": "1.7.3",
-    "cookie-parser": "1.4.3",
+    "cookie-parser": "1.4.4",
     "express": "4.16.4",
-    "express-http-proxy": "1.5.0",
-    "helmet": "3.15.0",
-    "ima": "0.16.0",
-    "ima-server": "0.16.0",
+    "express-http-proxy": "1.5.1",
+    "helmet": "3.15.1",
+    "ima": "0.16.2",
+    "ima-server": "0.16.1",
     "method-override": "3.0.0",
     "multer": "1.4.1",
-    "prop-types": "15.6.2",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "prop-types": "15.7.2",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "serve-favicon": "2.5.0"
   }
 }
