--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "release:next:init": "npm run release -- premajor --force-publish",
     "release:graduate": "npm run release -- --conventional-graduate",
     "release:publish": "lerna publish from-git --yes",
-    "lint:cmd": "node_modules/.bin/eslint -c ./.eslintrc.js --ignore-path ./.prettierignore",
+    "lint:cmd": "eslint -c ./.eslintrc.js --ignore-path ./.prettierignore",
     "lint": "npm run lint:cmd -- './**/*.{js,jsx}'",
     "lint:fix": "npm run lint -- --fix",
-    "precommit": "node_modules/.bin/lint-staged",
-    "commit": "node_modules/.bin/git-cz"
+    "precommit": "lint-staged",
+    "commit": "git-cz"
   },
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "license": "MIT",
