chore: 🤖 publish all scoped packages as public

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,7 +43,8 @@
     "url": "https://github.com/seznam/ima/issues"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "license": "MIT",
   "devDependencies": {
