--- a/packages/gulp-task-loader/package.json
+++ b/packages/gulp-task-loader/package.json
@@ -12,7 +12,8 @@
     "url": "https://github.com/seznam/ima.git"
   },
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "http://registry.npmjs.org/",
+    "access": "public"
   },
   "keywords": [
     "gulp",
