--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -22,7 +22,8 @@
     "url": "https://github.com/seznam/ima/issues"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "homepage": "https://github.com/seznam/ima",
   "peerDependencies": {
