test: 💍 Use all monorepo package veresions for benchmark test

--- a/packages/gulp-task-loader/package.json
+++ b/packages/gulp-task-loader/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/seznam/ima.git"
   },
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/",
+    "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
   "keywords": [
