fix: 🐛 Always release create-ima-app

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "benchmark": "utils/benchmark/benchmark.sh",
     "doc": "gulp doc",
     "test": "lerna run test",
-    "release": "lerna version",
+    "release": "lerna version --force-publish create-ima-app",
     "release:next": "npm run release -- prerelease",
-    "release:next:init": "npm run release -- premajor --force-publish",
+    "release:next:init": "lerna version premajor --force-publish",
     "release:graduate": "npm run release -- --conventional-graduate",
     "release:publish": "lerna publish from-git --yes",
     "lint:cmd": "eslint -c ./.eslintrc.js --ignore-path ./.prettierignore",
