refactor: 💡 removed ignores from lerna config

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,5 +6,7 @@
 /packages/*/docs
 /packages/*/doc
 /packages/*/node_modules
+/packages/devtools-scripts/es
+/packages/devtools-scripts/lib
 /packages/create-ima-app/examples/todos/assets/bower
 /packages/create-ima-app/examples/todos/assets/static/js/todomvc-common-base.js
