--- a/lerna.json
+++ b/lerna.json
@@ -9,9 +9,7 @@
     }
   },
   "packages": [
-    "packages/!(skeleton)",
-    "packages/!(devtools)",
-    "packages/!(devtools-scripts)"
+    "packages/!(skeleton)"
   ],
   "version": "17.0.0-rc.9"
 }
