test: 💍 Increase size-limit time limit to 1500 ms

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -81,11 +81,11 @@
   },
   "size-limit": [
     {
-      "limit": "1 s",
+      "limit": "1500 ms",
       "path": "dist/ima.client.cjs.js"
     },
     {
-      "limit": "1 s",
+      "limit": "1500 ms",
       "path": "dist/ima.client.esm.js"
     }
   ]
